fix spacing on homepage

--- a/app/assets/styles/home/_global.scss
+++ b/app/assets/styles/home/_global.scss
@@ -155,7 +155,9 @@
     h2 {
       padding-left: $global-spacing;
       font-family: $base-font-family;
+      font-weight: $base-font-bold;
       font-size: 1rem;
+      margin-bottom: $global-spacing/2;
     }
 
 
